# blob_share

./: .dockerignore  .gitignore  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  find_block.sh  intro.html  print.html  ralph.sh  searchindex.js  searchindex.json
.github/workflows/: ci.yml  deploy-book.yml  publish.yml  test.yml
.sqlx/: query-1c988e58e1a28c631098f070e75230d0b595dafc7fac2ea2f16144749220539f.json  query-1f880a26afcee6a90f9320f58fd91f1663c23cfd81d1942caa53365b4c7e2859.json  query-42ac4b902bad22b6226cf2b08958db505d36fc6deb025f176fc37aba4df57efe.json  query-518dfce8e564b0cbe8a1bcff9fc8ffd5137de07da32a969f5a89bc64b305c8e6.json  query-5867fc6ca976faed7142559806134433cb60ff6705ffc3447f0ae56f17fef197.json  query-88d61f67c86c9cadf509923224a9672e21dccdfca10939d700092fa06a59eb56.json  query-a6ccf35f6bd2d265828b86c39a1e5a5a2674554f7b2256832ea4a8b9e7fe5d72.json  query-cee4100ac96df98989003c4c6815ab6a2ba4353fffad9aef8041f12f3dcd05f4.json  query-df9e59f4d0e9924c0168a6e5b1511e2ceb01ca939e89015da0a721904550494a.json  query-f526aedee4ce66498740ef5a8429e1b330698b160fed08ac58b83646a8edd02b.json  query-f65e441cbfac899e816a4ede485992496ca160fe37254bfe24476b5b3c77d821.json
benches/: packing.rs
book/: book.toml
book/src/: intro.md
bundler/: Cargo.toml  trusted_setup.json
bundler/benches/: packing.rs
bundler/migrations/: 20231223063356_create_data_intent_table.sql  20240201000000_add_indexes.sql  20260131000000_add_cancelled_column.sql  20260131100000_prune_finalized_data.sql  20260201000000_multi_blob_splitting.sql
bundler/proptest-regressions/: packing.txt
bundler/src/: anchor_block.rs  api_metrics.rs  app.rs  backoff.rs  beacon_api_client.rs  blob_sender_task.rs  blob_tx_data.rs  block_subscriber_task.rs  consumer.rs  data_intent.rs  data_intent_tracker.rs  eth_provider.rs  evict_stale_intents_task.rs  gas.rs  kzg.rs  lib.rs  main.rs  metrics.rs  packing.rs  remote_node_tracker_task.rs  sync.rs  trusted_setup.rs
bundler/src/explorer/: mod.rs
bundler/src/reth_fork/: mod.rs  tx_eip4844.rs  tx_sidecar.rs
bundler/src/routes/: delete_data.rs  get_blobs.rs  get_history.rs  mod.rs  post_data.rs
bundler/src/sender/: main.rs
bundler/src/utils/: mod.rs  option_hex_vec.rs
bundler/static/: style.css
bundler/static/templates/: address.html  index.html  intent.html  tx.html
bundler/tests/: packing.rs
bundler/tests/api/: geth_helpers.rs  helpers.rs  mock_el_server.rs  post_intents.rs  run_geth.sh  run_lodestar.rs  run_lodestar.sh  tx_reorg.rs
bundler/tests/packing_test_vectors/: exact_price_100_.json  price_range_1.1x_1000_.json  price_range_1.1x_10_.json  price_range_1.2x_100_.json  price_range_1.5x_10_.json  price_range_2x_1000_.json
bundler_client/: Cargo.toml
bundler_client/src/: client.rs  gas.rs  lib.rs  option_hex_vec.rs  types.rs  utils.rs
bundler_client_cli/: Cargo.toml
bundler_client_cli/src/: main.rs
migrations/: 20231221183941_create_post_data_nonces_table.sql  20231223063356_create_data_intent_table.sql  20231223124040_create_users_table.sql  20231223204013_create_tx_inclusion_table.sql  20231224015302_create_anchor_block_table.sql  20240101133133_create_intent_inclusion_table.sql
proptest-regressions/: packing.txt
scripts/: check_synced_readme.py  init_db.sh  run_tests_macos.sh  spam.sh  sync_readme.py
src/: anchor_block.rs  app.rs  beacon_api_client.rs  blob_sender_task.rs  blob_tx_data.rs  block_subscriber_task.rs  client.rs  consumer.rs  data_intent.rs  data_intent_tracker.rs  eth_provider.rs  gas.rs  kzg.rs  lib.rs  main.rs  metrics.rs  packing.rs  routes.rs  sync.rs  trusted_setup.rs  tx_eip4844.rs  tx_sidecar.rs  utils.rs
src/reth_fork/: tx_eip4844.rs  tx_sidecar.rs
src/routes/: mod.rs  post_data.rs
src/sender/: main.rs
src/utils/: mod.rs
tests/: packing.rs
tests/api/: geth.rs  geth_helpers.rs  geth_test.rs  helpers.rs  jwtsecret  lighthouse_helpers.rs  main.rs  mock_el_server.rs  post_intents.rs  run_lodestar.rs  tx_reorg.rs
tests/api/geth/: Dockerfile  entrypoint.sh  genesis.json
tests/api/lighthouse/: generate_genesis.sh  mnemonics.yaml
tests/api/lighthouse/testnet/: config.yaml  genesis.ssz  tranches.csv
tests/packing_test_vectors/: exact_price_1000_.json  exact_price_10_.json  price_range_1.1x_100_.json  price_range_1.2x_1000_.json  price_range_1.2x_10_.json  price_range_1.5x_1000_.json  price_range_1.5x_100_.json  price_range_2x_100_.json  price_range_2x_10_.json
