[package]
name = "blob_share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
ethers = "2.0.11"
eyre = "0.6.9"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["macros", "rt"] }

# KZG types
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
# commit from https://github.com/sigp/lighthouse/blob/8a599ec7dc978f8d2a49100e3d712794b56eba2e/crypto/kzg/Cargo.toml#L19
c-kzg = "0.4.0"
sha2 = "0.10.7"
# For B256
alloy-primitives = "0.5"
bytes = "1.5.0"
alloy-rlp = "0.3.3"

[dev-dependencies]
hex = "0.4.3"
reqwest = "0.11.22"

