[package]
name = "blob_share"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "blobshare"


[profile.dev]
test-threads = 1


[dependencies]
actix-web = "4"
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.9"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["macros", "rt"] }

# KZG types
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
# commit from https://github.com/sigp/lighthouse/blob/8a599ec7dc978f8d2a49100e3d712794b56eba2e/crypto/kzg/Cargo.toml#L19
c-kzg = "0.4.0"
sha2 = "0.10.7"
# For B256
alloy-primitives = "0.5"
bytes = "1.5.0"
alloy-rlp = "0.3.3"
async-trait = "0.1.74"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.11.22"

[dev-dependencies]
hex = "0.4.3"
once_cell = "1.18.0"
reqwest = "0.11.22"
rand = "0.8.5"
proptest = "1.4.0"

