[package]
name = "blob_share"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "blobshare"


[[bin]]
path = "src/sender/main.rs"
name = "blobsender"


[[bench]]
name = "packing"
harness = false


[profile.dev]
test-threads = 1


[dependencies]
actix-web = "4"
clap = { version = "4.4.8", features = ["derive", "env"] }
env_logger = "0.10.1"
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.9"
hex = "0.4.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["macros", "rt", "fs"] }

# KZG types
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", branch = "main" }
# commit from https://github.com/sigp/lighthouse/blob/8a599ec7dc978f8d2a49100e3d712794b56eba2e/crypto/kzg/Cargo.toml#L19
c-kzg = "0.4.0"
sha2 = "0.10.7"
# For B256
alloy-primitives = "0.5"
bytes = "1.5.0"
alloy-rlp = "0.3.3"
async-trait = "0.1.74"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = "0.11.22"
ethereum_serde_utils = "0.5"
url = "2.5.0"
futures = "0.3.29"
rand = "0.8.5"
prometheus = { version = "0.13.3", features = ["push"] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
tracing-log = "0.2.0"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "mysql", "uuid", "chrono", "migrate"] }

[dev-dependencies]
hex = "0.4.3"
once_cell = "1.18.0"
reqwest = "0.11.22"
proptest = "1.4.0"
criterion = "0.5.1"
futures = "0.3.29"
tempfile = "3.8.1"

