[package]
name = "bundler_client"
version = "0.1.0"
edition.workspace = true


[lib]
path = "src/lib.rs"


[dependencies]
reqwest = { workspace = true }
eyre = "0.6.9"
ethers = { version = "2.0.11" }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
ethereum_serde_utils = "0.5"
hex = "0.4.3"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }



