[package]
name = "bundler_client_cli"
version = "0.1.0"
edition.workspace = true


[dependencies]
bundler_client = { workspace = true }

ethers = { version = "2.0.11", features = ["ws"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
tokio = { version = "1.34.0", features = ["macros", "rt"] }
dotenv = "0.15.0"
eyre = "0.6.9"
hex = "0.4.3"
